refactor: simplify package installation command

--- a/docs/install/linux.mdx
+++ b/docs/install/linux.mdx
@@ -239,7 +239,7 @@ If you run the command specified in the next step, this will be included automat
 * Install the required linux packages:
   * On **Ubuntu/Debian** run `sudo apt update && sudo apt install build-essential git wl-clipboard libxkbcommon-dev libdbus-1-dev libssl-dev libwxgtk3.*-dev`
   * On **Fedora** run `sudo dnf install @development-tools gcc-c++ wl-clipboard libxkbcommon-devel dbus-devel wxGTK-devel.x86_64`
-  * On **Arch/Manjaro** run `sudo pacman -S --needed base-devel git wl-clipboard libxkbcommon dbus openssl wxwidgets-gtk3`
+  * On **Arch/Manjaro** run `sudo pacman -S --needed git dbus base-devel wl-clipboard wxwidgets-gtk3`
 
 #### Compiling Espanso
 
