--- a/docs/matches/extensions.mdx
+++ b/docs/matches/extensions.mdx
@@ -262,187 +262,9 @@ matches:
     replace: "Best regards, {{myname}}"
 ```
 
-## Script Extension
-
-There will be tasks for which espanso was not designed. For those cases, espanso offers the
-**Script Extension**, that enables you to call a **script**, written in **any language**,
- and use its output in a match.
-
-To better understand this feature, let's dive into an example:
-
-We want to use the output of a **Python** script as an expansion. Let's create the `script.py` file,
-place it anywhere you want and paste the following code:
-
-```python
-print("Hello from python")
-```
-
-Now take note of the **path** of the script, and add the following match to the espanso configuration:
-
-
-```yaml
-  - trigger: ":pyscript"
-    replace: "{{output}}"
-    vars:
-      - name: output
-        type: script
-        params:
-          args:
-            - python
-            - /path/to/your/script.py
-```
-or
-```yml
-          args: [python, /path/to/your/script.py]
-```          
-
-If you now try to type `:pyscript` anywhere, you should see `Hello from python` appear.
-
-You can do the same thing with any programming language - just change the `args` array accordingly.
-
-:::tip script location
-
-The current best-practice when creating Script matches is to create a `scripts` directory in the `espanso` directory
-(at the same level of the `match` and `config` directory) and store the scripts there.
-
-That way, you can use the `%CONFIG%` wildcard to automatically replace the config directory with the correct path, such as:
-
-
-```yaml
-  - trigger: ":pyscript"
-    replace: "{{output}}"
-    vars:
-      - name: output
-        type: script
-        params:
-          args:
-            - python
-            - "%CONFIG%/scripts/script.py"
-            - parameter_1
-            - parameter_2
-```
-
-
-This makes it easier to create matches that work across many machines.
-
-For packages, the easiest place to locate the script is in their own directory, however.
-
-:::
-
-:::caution a note about performance
-
-Because of the execution time, you should limit yourself to fast-running scripts to avoid any lag.
-
-:::
-
-### Inline scripts
-Scripts can be included inline within an expansion by changing the `args:` in the above trigger, e.g.:
-```py
-          args:
-            - python
-            - -c
-            - |
-              fruits = ["apple", "banana", "cherry"]
-              for x in fruits:
-                print(x)
-```
-These avoid the need to keep track of the scripts' locations, and can use Espanso `{{variables}}` directly in the code, without having to pass them as arguments or Environment Variables. However, they're less easy to debug, and Windows has an 8191 character limit on them.
-
-#### Global variables
-
-If you're going to share such a script with several triggers it can be useful to put it into a variable. One method is to use the `echo` extension to assign a global variable, e.g.:
-```yml
-global_vars:
-  - name: pscript
-    type: echo
-    params:
-      echo: |
-        fruits = ["apple", "banana", "cherry"]
-        for x in fruits:
-          print(x) 
-
-matches:
-  - trigger: :test
-    replace: "{{output}}"
-    vars:
-      - name: output
-        type: script
-        params:
-          args: [python, -c, "{{pscript}}"]
-```          
-#### Anchors and Aliases
-
-An alternative is to use the YAML Anchor/Alias facility. This requires a named section which can contain several anchors but, unlike `global_vars:`, Espanso requires it *precede* the `matches:` section of the *same file*. The section name can be anything, so use something like `anchors:`. The *anchor* names themselves have a `&` prefix but when used in the trigger their *alias* exchanges this for a `*`. Otherwise the layout is very similar to that above, but more compact:
-```yml
-anchors:      
-  - &script1 |
-      fruits = ["apple", "banana", "cherry"]
-      for x in fruits:
-        print(x) 
-
-matches:
-  - trigger: :testt
-    replace: "{{output}}"
-    vars:
-      - name: output
-        type: script
-        params:
-          args: [python, -c, *script1]        
-```
-It is also possible to embed anchors inside trigger scripts. E.g.:
-```yml
-  - trigger: :test
-    replace: '{{output}}'
-    anchor: &script1 |
-      fruits = ["apple", "banana", "cherry"]
-      for x in fruits:
-        print(x) 
-    vars:
-      - name: output
-        type: script
-        params:
-          args: [python, -c, *script1]
-```
-The anchor will also be available for use in any other triggers that *follow*.
-
-
-### Useful Environment Variables
-
-When triggering the shell command, Espanso also injects a few useful Environment Variables that you can use:
-
-* `CONFIG`: Points to the path of the espanso config directory
-* All the values of the previously evaluated match variables.
-For more information, check out the [Variables](../variables) section.
-
-### UTF-8 characters
-By default, some scripts and shell expansions don't return UTF-8 characters, which can interfere with those generating foreign-language letters. 
-
-A solution for Python scripts is to include the following in the script:
-```py
-import sys
-sys.stdout.reconfigure(encoding='utf-8')
-```
-For PowerShell:
-```powershell
-[Console]::OutputEncoding = [System.Text.Encoding]::UTF8
-```
-For HTML:
-```html
-html: |
-  <meta charset="UTF-8">
-```
-For Bash:
-```bash
-cmd: |
-  export LANG='cs_CZ.UTF-8'
-```      
-using your `locale` language setting.
-
 ## Shell Extension
 
-The **Shell Extension** is similar to the [Script Extension](#script-extension), but instead of executing
-a script, it executes **shell commands**. This offers a lot of flexibility on Unix systems thanks to the
-`bash` shell (and thanks to PowerShell/WSL support also on Windows).
+There will be tasks for which espanso was not designed. For those cases, espanso offers the **Shell Extension**, which is similar to the [Script Extension](#script-extension) below, but executes **shell commands**. This offers a lot of flexibility on Unix systems thanks to the `bash` shell (and thanks to PowerShell/WSL support also on Windows).
 
 Let's say you regularly send your IP address to your coworkers. You can setup a match to fetch your public
 IP from [ipify](https://www.ipify.org/).
@@ -491,12 +313,11 @@ Possible values for the `shell` parameter are:
 * macOS: `sh`, `bash`, `pwsh`, `nu`
 * Linux: `sh`, `bash`, `pwsh`, `nu`
 
-> Note that Windows `cmd` doesn't work with multiline inline code.
+> Note that Windows `cmd` doesn't work with _multiline_ inline code.
 
 ### Bash pipes
 
-This extension also supports bash **pipes** as your shell does, such as:
-
+This extension supports bash **pipes** as your shell does, such as:
 
 ```yml
   - trigger: ":localip"
@@ -511,8 +332,7 @@ This extension also supports bash **pipes** as your shell does, such as:
 
 ### Trimming the output
 
-It's very common for commands to have outputs that also spawn a newline at the end. By default a trim option is enabled to remove any excess spaces/newlines. You can optionally disable the `trim` option:
-
+It's very common for commands to have outputs that also spawn a newline at the end. By default a trim option is enabled to _remove_ any excess spaces/newlines. You can optionally disable the `trim` option to retain them:
 
 ```yml
   - trigger: ":localip"
@@ -525,10 +345,9 @@ It's very common for commands to have outputs that also spawn a newline at the e
           trim: false
 ```
 
-
 ### Useful Environment Variables
 
-When triggering the shell command, espanso also injects a few useful Environment Variables that you can use:
+When triggering a shell or script command, espanso also injects a few useful Environment Variables that you can use:
 
 * `CONFIG`: Points to the path of the espanso config directory
 * All the values of the previously evaluated match variables.
@@ -543,7 +362,6 @@ This allows Windows users to execute Linux commands from their machine.
 
 Sometimes it's useful to understand what get's executed exactly, what are the return codes and error messages returned by the command. In order to do that, you can use the `debug: true` option:
 
-
 ```yml
   - trigger: ":localip"
     replace: "{{output}}"
@@ -555,9 +373,174 @@ Sometimes it's useful to understand what get's executed exactly, what are the re
           debug: true
 ```
 
-
 At this point, after triggering a match, the logs will be populated with useful information. Too see them, use the `espanso log` command.
 
+## Script Extension
+
+The
+**Script Extension**, enables you to call a **script**, written in **any language**,  and use its output in a match.
+
+To better understand this feature, let's dive into an example:
+
+We want to use the output of a **Python** script as an expansion. Let's create the `script.py` file, place it anywhere you want and paste the following code:
+
+```python
+print("Hello from python")
+```
+
+Now take note of the **path** of the script, and add the following match to the espanso configuration:
+
+
+```yaml
+  - trigger: ":pyscript"
+    replace: "{{output}}"
+    vars:
+      - name: output
+        type: script
+        params:
+          args:
+            - python
+            - /path/to/your/script.py
+```
+or
+```yml
+          args: [python, /path/to/your/script.py]
+```          
+
+If you now try to type `:pyscript` anywhere, you should see `Hello from python` appear.
+
+You can do the same thing with any programming language - just change the `args` sequence accordingly.
+
+:::tip script location
+
+The current best-practice when creating Script matches is to create a `scripts` directory in the `espanso` directory
+(at the same level as the `match` and `config` directories) and store the scripts there.
+
+That way, you can use the `%CONFIG%` wildcard to automatically replace the config directory with the correct path, such as:
+
+
+```yaml
+  - trigger: ":pyscript"
+    replace: "{{output}}"
+    vars:
+      - name: output
+        type: script
+        params:
+          args:
+            - python
+            - "%CONFIG%/scripts/script.py"
+            - parameter_1
+            - parameter_2
+```
+
+
+This makes it easier to create matches that work across many machines.
+
+For packages, the easiest place to locate the script is in their own directory, however.
+
+:::
+
+:::caution a note about performance
+
+Because of the execution time, you should limit yourself to fast-running scripts to avoid lag.
+
+:::
+
+[Environment variables](#Useful Environment Variables) and [output trimming](#Trimming the output) work as in the shell extension.
+
+### Inline scripts
+Scripts can be included inline within an expansion by changing the `args:` in the above trigger, e.g.:
+```py
+          args:
+            - python
+            - -c
+            - |
+              fruits = ["apple", "banana", "cherry"]
+              for x in fruits:
+                print(x)
+```
+These avoid the need to keep track of the scripts' locations, and can use Espanso `{{variables}}` directly in the code, without having to pass them as arguments or Environment Variables. However, they're less easy to debug, and Windows has an 8191 character limit on them.
+
+#### Global variables
+
+If you're going to share such a script with several triggers it can be useful to put it into a variable. One method is to use the `echo` extension to assign a global variable, e.g.:
+```yml
+global_vars:
+  - name: pscript
+    type: echo
+    params:
+      echo: |
+        fruits = ["apple", "banana", "cherry"]
+        for x in fruits:
+          print(x) 
+
+matches:
+  - trigger: :test
+    replace: "{{output}}"
+    vars:
+      - name: output
+        type: script
+        params:
+          args: [python, -c, "{{pscript}}"]
+```          
+#### Anchors and Aliases
+
+An alternative is to use the YAML Anchor/Alias facility. This requires a named section which can contain several anchors but, unlike `global_vars:`, Espanso requires it *precede* the `matches:` section of the *same file*. The section name can be anything, so use something like `anchors:`. The *anchor* names themselves have a `&` prefix but when used in the trigger their *alias* exchanges this for a `*`. Otherwise the layout is very similar to that above, but a little more compact:
+```yml
+anchors:      
+  - &script1 |
+      fruits = ["apple", "banana", "cherry"]
+      for x in fruits:
+        print(x) 
+
+matches:
+  - trigger: :testt
+    replace: "{{output}}"
+    vars:
+      - name: output
+        type: script
+        params:
+          args: [python, -c, *script1]        
+```
+It is also possible to embed anchors inside trigger scripts. E.g.:
+```yml
+  - trigger: :test
+    replace: '{{output}}'
+    anchor: &script1 |
+      fruits = ["apple", "banana", "cherry"]
+      for x in fruits:
+        print(x) 
+    vars:
+      - name: output
+        type: script
+        params:
+          args: [python, -c, *script1]
+```
+The anchor will also be available for use in this and any other triggers that *follow*.
+
+### UTF-8 characters
+By default, some scripts and shell expansions don't return UTF-8 characters, which can interfere with those generating foreign-language letters. 
+
+A solution for Python scripts is to include the following in the script:
+```py
+import sys
+sys.stdout.reconfigure(encoding='utf-8')
+```
+For PowerShell:
+```powershell
+[Console]::OutputEncoding = [System.Text.Encoding]::UTF8
+```
+For HTML:
+```html
+html: |
+  <meta charset="UTF-8">
+```
+For Bash:
+```bash
+cmd: |
+  export LANG='cs_CZ.UTF-8'
+```      
+using your `locale` language setting.
 
 ## Form Extension
 
@@ -566,7 +549,6 @@ them as you would do with any other extension.
 
 ![Espanso Form](/img/docs/macform.png)
 
-Besides regular expansions, you can also pass the values inserted inside the
-form to other extensions, such as scripts, opening up a world of possibilities.
+Besides regular expansions, you can also pass the values inserted inside the form to other extensions, such as scripts, opening up a world of possibilities.
 
 For more information, please visit the [Forms section](../forms).
