--- a/docs/matches/extensions.mdx
+++ b/docs/matches/extensions.mdx
@@ -446,7 +446,7 @@ Because of the execution time, you should limit yourself to fast-running scripts
 
 :::
 
-[Environment variables](#Useful Environment Variables) and [output trimming](#Trimming the output) work as in the shell extension.
+[Environment variables](#Useful-Environment-Variables) and [output trimming](#Trimming-the-output) work as in the shell extension.
 
 ### Inline scripts
 Scripts can be included inline within an expansion by changing the `args:` in the above trigger, e.g.:
