--- a/docs/matches/extensions.mdx
+++ b/docs/matches/extensions.mdx
@@ -284,7 +284,7 @@ IP from [ipify](https://www.ipify.org/).
 Now every time you type `:ip`, it gets expanded to your public
 IP address!
 
-Like the Script extension, the Shell extension can call external shell scripts and run inline multiline code.
+Like the Script extension, the Shell extension can call external shell script files and run inline multiline code.
 
 ### Choosing the Shell
 
